force-app/main/default/objects/Question_Response__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>