force-app/main/default/objects/Question_Response__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Name</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>